[gd_scene load_steps=32 format=3 uid="uid://cotmjl4g4mkd"]

[ext_resource type="Texture2D" uid="uid://cq0gt2hi0urab" path="res://assets/sprites/BlankPaper.png" id="1_b5cks"]
[ext_resource type="Script" path="res://scripts/Carpet.gd" id="1_dfwcu"]
[ext_resource type="Texture2D" uid="uid://cch3w1blqqi0p" path="res://assets/sprites/0. Menu/Menu_FolderEnd_front.png" id="3_3l0co"]
[ext_resource type="Texture2D" uid="uid://bywaga7ur6yoq" path="res://assets/sprites/0. Menu/Menu_FolderCoverWithText_front.png" id="4_ua8uf"]
[ext_resource type="Texture2D" uid="uid://bo7wjjr67mmml" path="res://assets/sprites/0. Menu/Menu_FolderCover_back.png" id="5_wi67p"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4x511"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_io3yy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_n30na"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_m21r1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_72mij"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_f3opi"]

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o1wfl"]

[sub_resource type="Animation" id="Animation_fqwtl"]
resource_name = "Flipping"
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FolderBack:visible")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.49, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, false, true, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("InsideRight:visible")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 0.51, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, true, false, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FolderFront:visible")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.49, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, false, true, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("InsideLeft:visible")
tracks/3/interp = 0
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5, 0.51, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, true, false, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:scale")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0, 1), Vector2(-1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("InsideLeft:scale")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("FolderFront:scale")
tracks/6/interp = 2
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-1, 1), Vector2(-1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("FolderFront:z_index")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 0]
}

[sub_resource type="Animation" id="Animation_d5kpg"]
resource_name = "GameStart"
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FolderBack:visible")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("InsideRight:visible")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FolderFront:visible")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 0.51, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, true, false, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("InsideLeft:visible")
tracks/3/interp = 0
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.49, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, false, true, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("FolderFront:scale")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0, 1), Vector2(-1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("InsideLeft:scale")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-1, 1), Vector2(0, 1), Vector2(1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("FolderFront:z_index")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.5, 0.51, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [10, 10, 0, 0]
}

[sub_resource type="Animation" id="Animation_ci4my"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FolderBack:visible")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("InsideRight:visible")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FolderFront:visible")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("InsideLeft:visible")
tracks/3/interp = 0
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("FolderFront:scale")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("InsideLeft:scale")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".:scale")
tracks/6/interp = 2
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("FolderFront:z_index")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}

[sub_resource type="Animation" id="Animation_m8a5w"]
resource_name = "SET"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FolderBack:visible")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("InsideRight:visible")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FolderFront:visible")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("InsideLeft:visible")
tracks/3/interp = 0
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("FolderFront:scale")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("InsideLeft:scale")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".:scale")
tracks/6/interp = 2
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("FolderFront:z_index")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xm8y5"]
_data = {
"Flipping": SubResource("Animation_fqwtl"),
"GameStart": SubResource("Animation_d5kpg"),
"RESET": SubResource("Animation_ci4my"),
"SET": SubResource("Animation_m8a5w")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_k22fj"]
animation = &"Flipping"
play_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_x173d"]
animation = &"Flipping"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_c31fg"]
animation = &"GameStart"
play_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3xbhn"]
animation = &"GameStart"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_r3746"]
animation = &"RESET"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_jmjqg"]
animation = &"SET"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_7ndkh"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_kvkov"]
advance_mode = 2
advance_condition = &"Flip"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_48a02"]
switch_mode = 2
advance_mode = 2
advance_condition = &"Flip Back"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_olikb"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_a7olq"]
advance_mode = 2
advance_condition = &"End"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ohqnn"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_cx4q7"]
switch_mode = 1
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_w52vc"]
states/End/position = Vector2(874.667, 118.519)
states/Flipping/node = SubResource("AnimationNodeAnimation_x173d")
states/Flipping/position = Vector2(588.889, 64.6667)
"states/Flipping Back/node" = SubResource("AnimationNodeAnimation_k22fj")
"states/Flipping Back/position" = Vector2(588, 192.667)
states/GameEnd/node = SubResource("AnimationNodeAnimation_c31fg")
states/GameEnd/position = Vector2(746.667, 119.134)
states/GameStart/node = SubResource("AnimationNodeAnimation_3xbhn")
states/GameStart/position = Vector2(317.333, 118.542)
states/RESET/node = SubResource("AnimationNodeAnimation_r3746")
states/RESET/position = Vector2(196, 118)
states/SET/node = SubResource("AnimationNodeAnimation_jmjqg")
states/SET/position = Vector2(466.667, 116.667)
states/Start/position = Vector2(98.6663, 117.778)
transitions = ["GameStart", "SET", SubResource("AnimationNodeStateMachineTransition_7ndkh"), "SET", "Flipping", SubResource("AnimationNodeStateMachineTransition_kvkov"), "Flipping", "Flipping Back", SubResource("AnimationNodeStateMachineTransition_48a02"), "Flipping Back", "SET", SubResource("AnimationNodeStateMachineTransition_olikb"), "SET", "GameEnd", SubResource("AnimationNodeStateMachineTransition_a7olq"), "Start", "RESET", SubResource("AnimationNodeStateMachineTransition_ohqnn"), "RESET", "GameStart", SubResource("AnimationNodeStateMachineTransition_cx4q7")]

[node name="Node2D2" type="Node2D"]
script = ExtResource("1_dfwcu")

[node name="Button" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_left = -478.0
offset_top = -282.0
offset_right = 322.0
offset_bottom = 282.0
scale = Vector2(1.42156, 1.44965)
pivot_offset = Vector2(200, 282)
localize_numeral_system = false
theme_override_styles/focus = SubResource("StyleBoxEmpty_4x511")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_io3yy")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_n30na")
theme_override_styles/hover = SubResource("StyleBoxEmpty_m21r1")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_72mij")
theme_override_styles/normal = SubResource("StyleBoxEmpty_f3opi")
button_mask = 3
shortcut_feedback = false
shortcut_in_tooltip = false
icon = ExtResource("1_b5cks")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimationTree")
libraries = {
"": SubResource("AnimationLibrary_o1wfl")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xm8y5")
}
tree_root = SubResource("AnimationNodeStateMachine_w52vc")
advance_expression_base_node = NodePath("../AnimationPlayer")
parameters/conditions/End = false
parameters/conditions/Flip = false
"parameters/conditions/Flip Back" = false

[node name="FolderBack" type="Sprite2D" parent="."]
visible = false
scale = Vector2(-1, 1)
texture = ExtResource("3_3l0co")
offset = Vector2(-311, 0)
flip_h = true

[node name="InsideRight" type="Sprite2D" parent="."]
texture = ExtResource("3_3l0co")
offset = Vector2(311, 0)

[node name="FolderFront" type="Sprite2D" parent="."]
z_index = 10
texture = ExtResource("4_ua8uf")
offset = Vector2(311, 0)

[node name="InsideLeft" type="Sprite2D" parent="."]
visible = false
scale = Vector2(-1, 1)
texture = ExtResource("5_wi67p")
offset = Vector2(-311, 0)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
modulate = Color(1, 1, 1, 0)
scale = Vector2(1.37446, 1.3576)
rect = Rect2(-400, -282, 800, 564)

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_button_button_up"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
